turns preserve-3d back on for transactions to stop blurryness on mobile

--- a/client/components/Transactions/index.sass
+++ b/client/components/Transactions/index.sass
@@ -15,6 +15,7 @@
   font-size: 20px
   backface-visibility: hidden
   -webkit-backface-visibility: hidden
+  -webkit-transform-style: preserve-3d
   -webkit-font-smoothing: subpixel-antialiased
   box-sizing: border-box
   box-shadow: 0 0 3px 1px #fff, 0 0 5px 2px #f0f, 0 0 4px 3px #0ff
